--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemailer": "<latest-version>",
+    "express": "<latest-version>",
+    "body-parser": "<latest-version>",
+    "cors": "<latest-version>"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -27,6 +32,7 @@
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.14",
     "passport": "^0.3.2",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "stripe": "^8.195.0"
   }
 }
